# ask-f1

./: .env.template  .envrc  .gitignore  README.md  docker-compose.override.yml.template  docker-compose.yml  justfile  pyproject.toml  shell.nix
ask_f1/: Dockerfile  justfile  pyproject.toml
ask_f1/ask_f1/: config.py  main.py
ask_f1/ask_f1/models/: chat.py  models.py
ask_f1/ask_f1/routes/: chat_router.py
ask_f1/ask_f1/utils/: logger.py
scripts/: chroma_ingest.py  ingest.py
services/backend/: justfile  pyproject.toml
services/backend/backend/: __init__.py  main.py
services/backend/backend/config/: config.py
services/backend/backend/core/: graph.py  nodes.py  state.py
services/backend/backend/models/: models.py
services/backend/backend/prompts/: system_prompt.txt
services/backend/backend/routes/: routes.py
services/backend/backend/services/: chroma_db.py  llm.py
services/backend/backend/tools/: chroma_tool.py  f1_mcp.py
services/backend/backend/utils/: logger.py  utils.py
services/f1_mcp/: justfile  main.py  pyproject.toml
src/ask_f1_agent/: Dockerfile  README.md  justfile  pyproject.toml
src/ask_f1_agent/ask_f1_agent/: config.py  main.py
src/ask_f1_agent/ask_f1_agent/agent/: graph.py  nodes.py  state.py
src/ask_f1_agent/ask_f1_agent/models/: chat.py  models.py
src/ask_f1_agent/ask_f1_agent/prompts/: system_prompt.txt
src/ask_f1_agent/ask_f1_agent/routes/: chat_router.py
src/ask_f1_agent/ask_f1_agent/services/: chroma_db.py  f1_mcp.py  llm.py
src/ask_f1_agent/ask_f1_agent/tools/: chroma_tool.py
src/ask_f1_agent/ask_f1_agent/utils/: logger.py  utils.py
src/f1_mcp/: Dockerfile  justfile  main.py
