[project]
name = "llmops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-google-vertexai>=3.0.3",
    "pypdf>=6.3.0",
]

[tool.uv.workspace]
members = [
    "services/backend",
    "services/vllm_serving",
    "services/f1_mcp",
]

[dependency-groups]
dev = [
    "mypy",
    "pre-commit",
    "ruff",
]
